fix(orb-ui): text alignment of provisioning agent

--- a/ui/src/app/pages/fleet/agents/key/agent.key.component.scss
+++ b/ui/src/app/pages/fleet/agents/key/agent.key.component.scss
@@ -1,5 +1,5 @@
 nb-card {
-  max-width: 38rem;
+  max-width: 50rem;
   
   nb-card-header {
     background: #232940;
